--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "moment": "^2.21.0",
     "native-base": "^2.3.10",
     "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.2",
+    "react-native": "^0.54.2",
     "react-native-elements": "^0.19.0",
+    "react-native-fabric": "^0.5.1",
+    "react-native-fabric-crashlytics": "^0.1.8",
+    "react-native-firebase": "^4.0.4",
     "react-native-global-props": "^1.1.3",
     "react-native-keyboard-aware-scroll-view": "^0.4.4",
     "react-native-keyboard-aware-scrollview": "^2.0.0",
