--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-native-elements": "^0.19.0",
     "react-native-fabric": "^0.5.1",
     "react-native-fabric-crashlytics": "^0.1.8",
+    "react-native-fast-image": "^4.0.4",
     "react-native-firebase": "^4.0.4",
     "react-native-global-props": "^1.1.3",
+    "react-native-htmlview": "^0.12.1",
     "react-native-keyboard-aware-scroll-view": "^0.4.4",
     "react-native-keyboard-aware-scrollview": "^2.0.0",
     "react-native-loading-spinner-overlay": "^0.5.2",
