--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-navigation": "^1.1.384",
     "react-native-pages": "^0.7.0",
     "react-native-popup-dialog": "^0.11.46",
+    "react-native-qrcode": "^0.2.6",
     "react-native-responsive-dimensions": "^1.0.2",
     "react-native-select-input-ios": "^1.1.4",
     "react-native-simple-store": "^1.3.0",
