--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "mobx-react": "^4.2.2",
     "moment": "^2.21.0",
     "native-base": "^2.3.10",
-    "react": "^16.3.0-alpha.1",
+    "react": "^16.3.2",
     "react-native": "^0.54.2",
     "react-native-communications": "^2.2.1",
     "react-native-elements": "^0.19.0",
@@ -30,6 +30,7 @@
     "react-native-navigation": "^1.1.384",
     "react-native-pages": "^0.7.0",
     "react-native-popup-dialog": "^0.11.46",
+    "react-native-qrcode": "^0.2.6",
     "react-native-responsive-dimensions": "^1.0.2",
     "react-native-select-input-ios": "^1.1.4",
     "react-native-simple-store": "^1.3.0",
