--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.4.4",
     "react-native-keyboard-aware-scrollview": "^2.0.0",
     "react-native-loading-spinner-overlay": "^0.5.2",
+    "react-native-maps": "^0.21.0",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-navigation": "^1.1.384",
     "react-native-pages": "^0.7.0",
@@ -33,6 +34,7 @@
     "react-native-qrcode": "^0.2.6",
     "react-native-responsive-dimensions": "^1.0.2",
     "react-native-select-input-ios": "^1.1.4",
+    "react-native-selectmultiple-button": "0.0.86",
     "react-native-simple-store": "^1.3.0",
     "react-native-text-input-mask": "github:leoneparise/react-native-text-input-mask#fix-for-rn-54",
     "react-native-vector-icons": "^4.5.0"
