--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-firebase": "^4.0.4",
     "react-native-global-props": "^1.1.3",
     "react-native-htmlview": "^0.12.1",
+    "react-native-image-picker": "^0.26.7",
+    "react-native-image-resizer": "^1.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.4.4",
     "react-native-keyboard-aware-scrollview": "^2.0.0",
     "react-native-loading-spinner-overlay": "^0.5.2",
