--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-select-input-ios": "^1.1.4",
     "react-native-simple-store": "^1.3.0",
     "react-native-text-input-mask": "github:leoneparise/react-native-text-input-mask#fix-for-rn-54",
-    "react-native-vector-icons": "^4.5.0"
+    "react-native-vector-icons": "^4.5.0",
+    "react-timer-mixin": "^0.13.3"
   },
   "devDependencies": {
     "react-test-renderer": "16.2.0",
