--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-simple-store": "^1.3.0",
     "react-native-sync-localstorage": "0.0.3",
     "react-native-text-input-mask": "github:leoneparise/react-native-text-input-mask#fix-for-rn-54",
+    "react-native-touch-id": "^4.0.1",
     "react-native-vector-icons": "^4.5.0",
     "react-timer-mixin": "^0.13.3"
   },
