--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-maps": "^0.21.0",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-navigation": "^1.1.384",
+    "react-native-navigation-directions": "^1.0.1",
     "react-native-pages": "^0.7.0",
     "react-native-popup-dialog": "^0.11.46",
     "react-native-qrcode": "^0.2.6",
