--- a/ios/MTI/Info.plist
+++ b/ios/MTI/Info.plist
@@ -38,7 +38,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) would like to use your camera</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>$(PRODUCT_NAME) would like to your microphone (for videos)</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
@@ -63,6 +63,7 @@
 		<string>MaterialCommunityIcons.ttf</string>
 		<string>DBHelvethaicaX.ttf</string>
 		<string>DBHelvethaicaX-Med.ttf</string>
+		<string>DBHelvethaicaX-Bd.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
