--- a/ios/Podfile
+++ b/ios/Podfile
@@ -46,6 +46,12 @@ target 'MTI' do
   pod 'Google-Maps-iOS-Utils' # Remove this line if you don't want to support GoogleMaps on iOS
 
 
+  pod 'TouchID', :path => '../node_modules/react-native-touch-id'
+
+  pod 'ReactNativeFabric', :path => '../node_modules/react-native-fabric'
+
+  pod 'react-native-fast-image', :path => '../node_modules/react-native-fast-image'
+
 end
 
 post_install do |installer|
