--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-global-props": "^1.1.3",
     "react-native-google-maps-directions": "^2.0.0",
     "react-native-htmlview": "^0.12.1",
+    "react-native-image-gallery": "^2.1.5",
     "react-native-image-picker": "^0.26.7",
     "react-native-image-resizer": "^1.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.4.4",
