--- a/ios/Podfile
+++ b/ios/Podfile
@@ -48,6 +48,8 @@ target 'MTI' do
 
   pod 'TouchID', :path => '../node_modules/react-native-touch-id'
 
+  pod 'react-native-fast-image', :path => '../node_modules/react-native-fast-image'
+
 end
 
 post_install do |installer|
